--- a/src/case-intro/case-intro.scss
+++ b/src/case-intro/case-intro.scss
@@ -15,6 +15,16 @@
     left: 0;
     top: 0;
     clip-path: polygon(0 0, 100% 0, 100% 60vw, 0 60vw);
+
+    .testimonial & {
+      clip-path: none;
+    }
+
+    @include tablet-big-screen {
+      width: 100%;
+      top: 40vw;
+      clip-path: polygon(0 0, 100% 0, 100% 115vw, 0 115vw);
+    }
   }
 
   &__filter-text {
@@ -45,9 +55,13 @@
     z-index: 1;
   }
 
-
   &__work {
     padding-top: 32vw;
+
+    @include tablet-big-screen {
+      display: grid;
+      padding-top: 129vw;
+    }
   }
 
   &__work-items {
@@ -58,15 +72,34 @@
     text-align: right;
     letter-spacing: -0.033em;
 
+
+    @include tablet-big-screen {
+      font-size: 6.3548vw;
+      text-align: left;
+      margin-top: 16vw;
+      order: 2;
+    }
   }
 
   &__work-item {
+
+    @include tablet-big-screen {
+      border-top: .4vw solid var(--main-text-color);
+      padding-top: 3vw;
+      margin-bottom: 10vw;
+    }
+
   }
 
   &__work-img-wrapper {
     margin-top: 4vw;
     margin-left: auto;
     width: 64vw;
+
+    @include tablet-big-screen {
+      order: 1;
+      width: 85vw;
+    }
   }
 
   &__work-img {
@@ -80,6 +113,12 @@
     grid-template-columns: 39vw 1fr;
     grid-gap: 20vw;
     margin-top: 5vw;
+
+    @include tablet-big-screen {
+      order: 4;
+      grid-template-columns: 1fr;
+      margin-top: 12vw;
+    }
   }
 
   &__desc-item {
@@ -92,6 +131,15 @@
 
     &--client {
       grid-template-columns: 12vw 14vw;
+
+      @include tablet-big-screen {
+        order: -1;
+      }
+    }
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+      font-size: 7.3548vw;
     }
   }
 
@@ -100,6 +148,11 @@
   }
 
   &__desc-item-text {
+
+    @include tablet-big-screen {
+      margin-top: 4vw;
+      line-height: 103%;
+    }
 
   }
 
@@ -112,16 +165,20 @@
   &__desc-item-text {
   }
 
-  &__cover {
-    margin-top: 3vw;
-  }
-
   &__title {
     @include manrope;
     font-size: 15.5810vw;
     color: var(--main-case-color);
     letter-spacing: -0.066em;
     margin-bottom: 1vw;
+    margin-top: 3vw;
+
+    @include tablet-big-screen {
+      order: 3;
+      margin-top: 41vw;
+      margin-left: -14vw;
+      font-size: 36.581vw;
+    }
   }
 
   &__img-wrapper {
@@ -129,6 +186,12 @@
     margin: 0 -10.0052vw;
     height: 32vw;
     overflow: hidden;
+
+    @include tablet-big-screen {
+      order: 5;
+      margin-top: 44vw;
+      height: 176vw;
+    }
   }
 
   &__img {
@@ -137,6 +200,10 @@
     height: auto;
     min-height: 42vw;
     object-fit: cover;
+
+    @include tablet-big-screen {
+      min-height: 230vw;
+    }
   }
 
   &__results {
@@ -145,6 +212,15 @@
     border-top: 0.1563vw solid var(--natural-case-color);
     display: grid;
     grid-template-columns: 48vw 1fr;
+
+    @include tablet-big-screen {
+      order: 6;
+      margin-top: 20vw;
+      padding-top: 1vw;
+      border-top: 1.1563vw solid var(--natural-case-color);
+      grid-template-columns: 1fr;
+      grid-gap: 17vw;
+    }
   }
 
   &__results-title {
@@ -153,12 +229,20 @@
     font-weight: 200;
     font-size: 6.9306vw;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 21.9306vw;
+    }
   }
 
   &__counters {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 5vw;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__counters-item {
@@ -170,6 +254,10 @@
     font-weight: 200;
     font-size: 6.9306vw;
     letter-spacing: -0.033em;
+
+    @include tablet-big-screen {
+      font-size: 21.9306vw;
+    }
   }
 
   &__counter-desc {
@@ -179,6 +267,10 @@
     font-size: 1.3548vw;
     letter-spacing: -0.033em;
     margin-top: 0.5vw;
+
+    @include tablet-big-screen {
+      font-size: 7.3548vw;
+    }
   }
 
   &__counter-desc-line {
@@ -190,12 +282,54 @@
     grid-template-columns: 70vw 1fr;
     margin-top: 17vw;
     grid-gap: 1vw;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__screenshots-item {
     &--mobile {
       margin-top: 29vw;
+
+      @include tablet-big-screen {
+        display: none;
+      }
     }
+
+    &--for-mobile {
+      display: none;
+
+      @include tablet-big-screen {
+        display: block;
+        position: relative;
+        padding-top: 67vw;
+        margin-top: 19vw;
+      }
+    }
+  }
+
+  &__screenshots-item-parallax {
+    position: absolute;
+    left: -10vw;
+    top: 0;
+    width: calc(100% + 20vw);
+    height: 116vw;
+  }
+
+  &__screenshots-item-parallax-img {
+    height: 140vw;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  &__screenshots-item-img {
+    display: block;
+    margin-left: auto;
+    width: 51vw;
+    height: auto;
+    position: relative;
+    z-index: 1;
   }
 
   &__screenshots-item-sizes {
@@ -206,8 +340,16 @@
     letter-spacing: -0.033em;
     color: var(--natural-text-color);
 
+    @include tablet-big-screen {
+      font-size: 5.3548vw;
+    }
+
     &--desktop {
       width: 51vw;
+
+      @include tablet-big-screen {
+        width: 100%;
+      }
     }
   }
 
@@ -223,8 +365,37 @@
     height: auto;
     display: block;
 
+    @include tablet-big-screen {
+      margin-top: 17vw;
+    }
+
+    &--for-mobile-desc {
+      display: none;
+
+      @include tablet-big-screen {
+        display: block;
+      }
+    }
+
+    &--for-desc-desc {
+      display: block;
+
+      @include tablet-big-screen {
+        display: none;
+      }
+    }
+
+
     &--desktop {
       width: 51vw;
+
+      @include tablet-big-screen {
+        width: 94%;
+        margin-left: auto;
+        margin-right: auto;
+        z-index: 1;
+        position: relative;
+      }
     }
 
     &--mobile {
@@ -239,15 +410,30 @@
     letter-spacing: -0.033em;
     display: grid;
     grid-template-columns: 26vw 1fr;
+
+    @include tablet-big-screen {
+      font-size: 5.3548vw;
+      grid-template-columns: 30vw 1fr;
+    }
   }
 
   &__screenshots-item-analysis-title {
     color: var(--natural-text-color);
+
+    @include tablet-big-screen {
+      margin-top: -0.4vw;
+      font-weight: 700;
+    }
   }
 
   &__screenshots-item-analysis-items {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    @include tablet-big-screen {
+      grid-template-columns: 1fr;
+      grid-gap: 5vw;
+    }
   }
 
   &__screenshots-item-analysis-item {
