--- a/src/loader/loader.scss
+++ b/src/loader/loader.scss
@@ -102,7 +102,10 @@
     letter-spacing: -0.033em;
 
     @include tablet-big-screen {
-      display: none;
+      position: absolute;
+      bottom: 81vw;
+      left: 39.1vw;
+      font-size: 5.7196vw;
     }
   }
 
