--- a/src/user-experience/user-experience.scss
+++ b/src/user-experience/user-experience.scss
@@ -31,6 +31,10 @@
       top: 86.5vw;
       left: 0;
       font-size: 6.4392vw;
+
+      &--mobile-hidden {
+        display: none;
+      }
     }
   }
 
@@ -57,8 +61,27 @@
 
   &__title-line {
     margin-top: -7vw;
+    position: relative;
+
 
     &--dot {
+      width: fit-content;
+    }
+
+    &--dot:after {
+      @include pseudo-absolute;
+      width: 0.6vw;
+      height: 0.6vw;
+      right: -1vw;
+      top: 5vw;
+      border-radius: 50%;
+      background: var(--main-case-color);
+
+      @include tablet-big-screen {
+        width: 1.2vw;
+        height: 1.2vw;
+        right: -2vw;
+      }
     }
   }
 
