--- a/src/testimonial/testimonial.scss
+++ b/src/testimonial/testimonial.scss
@@ -40,7 +40,7 @@
     padding-top: 11.5vw;
 
     @include tablet-big-screen {
-      padding-left: 31vw;
+      padding-left: 22vw;
     }
 
   }
@@ -90,7 +90,7 @@
 
   &__item {
     width: 100%;
-    color: var(--white-color);
+    color: var(--main-text-color);
     font-size: 4.1688vw;
     line-height: 110%;
     letter-spacing: -0.033em;
