--- a/src/lets-discuss/lets-discuss.scss
+++ b/src/lets-discuss/lets-discuss.scss
@@ -131,7 +131,8 @@
       font-weight: 800;
 
       @include tablet-big-screen {
-        font-size: 13vw;
+        font-size: 12vw;
+        font-weight: 700;
       }
     }
   }
